--- a/index.css
+++ b/index.css
@@ -47,10 +47,14 @@
 
 .gif {
   display:none;
+  width:90vw;
+  margin:auto;
 }
 
 .gif2 {
   display:none;
+  width:90vw;
+  margin:auto;
 }
 
 .card {
