--- a/index.css
+++ b/index.css
@@ -24,13 +24,13 @@
 }
 
 .three{
-  top:7%;
+  top:10%;
   margin-left:15%;
   transform:rotate(45deg);
 }
 
 .two {
-  top:16%;
+  top:20%;
   margin-left:15%;
   transform:rotate(-45deg);
 }
@@ -61,5 +61,9 @@
   display: none;
 }
 .start{
+  display:none;
+}
+
+.play {
   display:none;
 }
